--- a/.github/workflows/update-publications.yml
+++ b/.github/workflows/update-publications.yml
@@ -8,9 +8,13 @@ on:
 jobs:
   update-publications:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     
     steps:
     - uses: actions/checkout@v3
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
     
     - name: Set up Python
       uses: actions/setup-python@v4
