--- a/.github/workflows/update-publications.yml
+++ b/.github/workflows/update-publications.yml
@@ -33,5 +33,5 @@ jobs:
       run: |
         git config --local user.email "github-actions[bot]@users.noreply.github.com"
         git config --local user.name "github-actions[bot]"
-        git add _data/publications.json
+        git add data/publications.json
         git diff --quiet && git diff --staged --quiet || (git commit -m "Update publications data" && git push) 
